--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h3>İlk Web Sayfası</h3>
-    
+    <ul>
+    <a href="/sayfa/arac-getir"<li>Sayfa</li>></a>
+    <a href="/islem"<li>İşlem</li>></a>
+    <a href="/dizi"<li>Diziler</li>></a>
+    <ul>
 </body>
 </html>
